# limb

./: .gitmodules  CLAUDE.md  README.md  pyproject.toml
.claude/: refactor-plan.md  restructure-proposal.md
.claude/commands/: add-vla-config.md  launch.md  lint.md  refactor.md  test-hw.md
configs/: collection.yaml  collection_pedal.yaml  collection_vr.yaml  yam_gello_bimanual.yaml  yam_gello_collect.yaml  yam_gello_network_bimanual.yaml  yam_pi0_bimanual.yaml  yam_policy_bimanual.yaml  yam_viser_bimanual.yaml  yam_viser_single_arm.yaml  yam_vr_bimanual.yaml  yam_vr_collect.yaml
docs/: data_collection.md  policy_server_spec.md  r1lite_gello_teleop.md  teleop.md
limb/: cli.py  discovery.py  replay.py  tui.py
limb/agents/: agent.py
limb/agents/policy_learning/: action_chunk_manager.py  async_pi0_agent.py  diffusion_policy_agent.py  policy_agent.py  policy_client.py  transforms.py
limb/agents/teleoperation/: yam_gello_agent.py  yam_viser_agent.py  yam_vr_agent.py
limb/core/: observation.py
limb/data/: convert_lerobot.py  convert_webdataset.py  episode_utils.py  upload.py  visualize_episode.py
limb/devices/: joycon_gripper_reader.py  network_dynamixel_reader.py  xr_client.py
limb/dynamixel/: dynamixel_reader.py
limb/envs/: launch.py  robot_env.py
limb/envs/configs/: loader.py
limb/input_devices/: joycon_gripper_reader.py
limb/recording/: episode_recorder.py  session.py  trigger.py
limb/robots/: robot.py  utils.py  yam_motor_chain_robot.py
limb/robots/inverse_kinematics/: yam_pink.py  yam_pyroki.py
limb/robots/viser/: viser_base.py  viser_monitor.py
limb/scripts/: feetech_test.py  pyroki_ik_vel_cost.py  pyroki_trajopt_example.py  reset_all_can.sh  take_image_zed.py
limb/sensors/cameras/: camera.py  camera_utils.py  opencv_camera.py  realsense_camera.py  zed_camera.py
limb/utils/: launch_utils.py  performance_utils.py  portal_utils.py  xr_client.py
limb/visualization/: app.py  viser_base.py  viser_monitor.py  viser_session_panel.py
limb/visualization/panels/: camera_panel.py  loop_status_panel.py  recording_panel.py  session_panel.py  urdf_panel.py
robot_configs/yam/: left.yaml  right.yaml
scripts/: install_xrobotoolkit_sdk.sh  start_gello_server.sh  test_gello_input.py  test_joycon_gripper.py  test_realsense_cameras.py  test_vr_input.py
scripts/data/: convert_to_lerobot.py  visualize_episode.py
scripts/diagnostics/: gello_position_server.py  test_gello_input.py
